--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       margin-left: 4rem;
       margin-top: 2.5rem;
       filter: brightness(0) invert(1);
+      transition: height 0.2s, margin 0.2s;
     }
     nav {
       flex: 1;
@@ -101,6 +102,9 @@
     nav a:hover {
       color: #606060;
     }
+    main {
+      padding-top: 130px;
+    }
     .hero {
       position: relative;
       min-height: 90vh;
@@ -161,15 +165,13 @@
       max-width: 520px;
       text-shadow: 0 2px 5px #191a24af;
     }
-
-    /* Button Styles for both CTA buttons (Get Started and Send Message) */
     .cta-button {
       background: #fff;
       color: #191a2b;
       border: none;
       padding: 1rem 2.3rem;
       font-size: 1.1rem;
-      border-radius: 7px; /* Square style button */
+      border-radius: 7px;
       font-weight: 700;
       box-shadow: 0 4px 20px #232f3e19;
       cursor: pointer;
@@ -191,7 +193,6 @@
       color: #fff;
       box-shadow: 0 2px 10px #232f3e40;
     }
-
     section {
       max-width: 900px;
       margin: 2rem auto;
@@ -213,12 +214,20 @@
       font-size: 1rem;
       letter-spacing: .7px;
     }
-    @media (max-width: 900px) {
-      .hero {
-        padding-left: 4vw;
+    @media (max-width: 1100px) {
+      section {
+        max-width: 99vw;
+        margin: 1rem 0.5rem;
       }
+    }
+    @media (max-width: 900px) {
       header {
         padding: 2rem 1rem 0 1rem;
+      }
+      header img {
+        height: 77px;
+        margin-left: 1.2rem;
+        margin-top: 1rem;
       }
       nav {
         justify-content: center;
@@ -228,12 +237,76 @@
       }
       section {
         margin: 1.2rem 0.2rem;
+        padding: 1.3rem 0.5rem;
+      }
+      .hero {
+        padding-left: 2vw;
+        padding-top: 115px;
+        min-height: 65vh;
+      }
+      .hero h1 {
+        font-size: 2rem;
+      }
+      .hero p {
+        font-size: 1.05rem;
       }
     }
-    /* Optional: If you want "Send Message" Contact button to fill its column instead */
-    .contact-section .cta-button {
-      width: 100%;
-      max-width: none;
+    @media (max-width: 700px) {
+      header img {
+        height: 54px;
+        margin-left: 0.5rem;
+        margin-top: .7rem;
+      }
+      nav {
+        padding-right: 0.2rem;
+        gap: 0.8rem;
+        margin-top: .7rem;
+        font-size: 0.98rem;
+      }
+      .hero {
+        padding-left: 0.5rem;
+        min-height: 48vh;
+      }
+      .hero-content {
+        max-width: 98vw;
+        padding-left: 0;
+      }
+      .hero h1 {
+        font-size: 1.42rem;
+      }
+      .hero p {
+        font-size: 1em;
+      }
+      section {
+        padding: 1rem .25rem;
+        border-radius: 8px;
+        font-size: 0.98em;
+      }
+      .cta-button {
+        font-size: 1em;
+        padding: 0.85rem 1.2rem;
+        margin-top: .8rem;
+        max-width: 99vw;
+      }
+      h2, h1 {
+        font-size: 1.15rem;
+      }
+    }
+    @media (max-width: 500px) {
+      .hero {
+        padding-left: 0.1rem;
+        padding-top: 67px;
+      }
+      .hero-content {
+        padding: 0 0.2rem;
+      }
+      .cta-button {
+        font-size: 0.95em;
+        padding: 0.75rem 0.6rem;
+      }
+      section, .services, .testimonials {
+        padding: 0.7rem .13rem;
+      }
     }
   </style>
 </head>
@@ -253,56 +326,58 @@
       <a href="https://shaggyyyz.github.io/nestcapitalfinance-landing/contact.html">Contact</a>
     </nav>
   </header>
-  <div class="hero">
-    <div class="hero-slideshow">
-      <div class="slide active" style="background-image: url('https://raw.githubusercontent.com/Shaggyyyz/nestcapitalfinance-landing/refs/heads/main/image1.jpeg');"></div>
-      <div class="slide" style="background-image: url('https://raw.githubusercontent.com/Shaggyyyz/nestcapitalfinance-landing/refs/heads/main/image2.jpeg');"></div>
-      <div class="slide" style="background-image: url('https://raw.githubusercontent.com/Shaggyyyz/nestcapitalfinance-landing/refs/heads/main/image3.jpeg');"></div>
-      <div class="slide" style="background-image: url('https://raw.githubusercontent.com/Shaggyyyz/nestcapitalfinance-landing/refs/heads/main/image4.jpeg');"></div>
-      <div class="slide" style="background-image: url('https://raw.githubusercontent.com/Shaggyyyz/nestcapitalfinance-landing/refs/heads/main/image5.jpeg');"></div>
-    </div>
-    <div class="hero-content">
-      <h1>Dream. Plan. Buy.</h1>
-      <p>Your trusted partner for home loans, property finance, and Commercial finance</p>
-      <button class="cta-button" id="getStartedBtn">Get Started</button>
-    </div>
-  </div>
-  <section id="services">
-    <h2>Our Services</h2>
-    <div class="services">
-      <div class="service">
-        <h3>Home Loans</h3>
-        <p>Access competitive residential and commercial home loan solutions from 60+ lenders, tailored to your needs.</p>
+  <main>
+    <div class="hero">
+      <div class="hero-slideshow">
+        <div class="slide active" style="background-image: url('https://raw.githubusercontent.com/Shaggyyyz/nestcapitalfinance-landing/refs/heads/main/image1.jpeg');"></div>
+        <div class="slide" style="background-image: url('https://raw.githubusercontent.com/Shaggyyyz/nestcapitalfinance-landing/refs/heads/main/image2.jpeg');"></div>
+        <div class="slide" style="background-image: url('https://raw.githubusercontent.com/Shaggyyyz/nestcapitalfinance-landing/refs/heads/main/image3.jpeg');"></div>
+        <div class="slide" style="background-image: url('https://raw.githubusercontent.com/Shaggyyyz/nestcapitalfinance-landing/refs/heads/main/image4.jpeg');"></div>
+        <div class="slide" style="background-image: url('https://raw.githubusercontent.com/Shaggyyyz/nestcapitalfinance-landing/refs/heads/main/image5.jpeg');"></div>
       </div>
-      <div class="service">
-        <h3>Property Advisory</h3>
-        <p>Guidance for buying, selling, or investing—local expertise and trusted advocacy to help you succeed.</p>
-      </div>
-      <div class="service">
-        <h3>Asset Finance</h3>
-        <p>Finance for vehicles, business equipment, and assets—streamlined for fast approvals and fair rates.</p>
+      <div class="hero-content">
+        <h1>Dream. Plan. Buy.</h1>
+        <p>Your trusted partner for home loans, property finance, and Commercial finance</p>
+        <button class="cta-button" id="getStartedBtn">Get Started</button>
       </div>
     </div>
-  </section>
-  <section id="about">
-    <h2>About Nest Capital Finance</h2>
-    <p>At Nest Capital Finance, our mission is to simplify the journey to your dream property. Our award-nominated team combines industry experience, personal service, and insider access to leading lenders—earning 5-star client reviews every step of the way. Based in Australia, we support clients locally and overseas with tailored mortgage and property solutions.</p>
-    <div class="testimonials">
-      <strong>Testimonials</strong>
-      <div class="testimonial">"Nest Capital Finance made my home buying journey stress-free—professional, fast, and found a great rate for me." — Chris, Melbourne</div>
-      <div class="testimonial">"Expert advice, clear communication, and genuine care. Couldn’t recommend them more highly." — Priya, Sydney</div>
-    </div>
-  </section>
-  <section class="contact-section" id="contact">
-    <h2>Contact Us</h2>
-    <p>Want to discuss your property finance needs? Send us a message and our team will get in touch.</p>
-    <form>
-      <input type="text" placeholder="Full Name" required /><br />
-      <input type="email" placeholder="Email" required /><br />
-      <textarea placeholder="Your Message" rows="4" required></textarea><br />
-      <button type="submit" class="cta-button">Send Message</button>
-    </form>
-  </section>
+    <section id="services">
+      <h2>Our Services</h2>
+      <div class="services">
+        <div class="service">
+          <h3>Home Loans</h3>
+          <p>Access competitive residential and commercial home loan solutions from 60+ lenders, tailored to your needs.</p>
+        </div>
+        <div class="service">
+          <h3>Property Advisory</h3>
+          <p>Guidance for buying, selling, or investing—local expertise and trusted advocacy to help you succeed.</p>
+        </div>
+        <div class="service">
+          <h3>Asset Finance</h3>
+          <p>Finance for vehicles, business equipment, and assets—streamlined for fast approvals and fair rates.</p>
+        </div>
+      </div>
+    </section>
+    <section id="about">
+      <h2>About Nest Capital Finance</h2>
+      <p>At Nest Capital Finance, our mission is to simplify the journey to your dream property. Our award-nominated team combines industry experience, personal service, and insider access to leading lenders—earning 5-star client reviews every step of the way. Based in Australia, we support clients locally and overseas with tailored mortgage and property solutions.</p>
+      <div class="testimonials">
+        <strong>Testimonials</strong>
+        <div class="testimonial">"Nest Capital Finance made my home buying journey stress-free—professional, fast, and found a great rate for me." — Chris, Melbourne</div>
+        <div class="testimonial">"Expert advice, clear communication, and genuine care. Couldn’t recommend them more highly." — Priya, Sydney</div>
+      </div>
+    </section>
+    <section class="contact-section" id="contact">
+      <h2>Contact Us</h2>
+      <p>Want to discuss your property finance needs? Send us a message and our team will get in touch.</p>
+      <form>
+        <input type="text" placeholder="Full Name" required /><br />
+        <input type="email" placeholder="Email" required /><br />
+        <textarea placeholder="Your Message" rows="4" required></textarea><br />
+        <button type="submit" class="cta-button">Send Message</button>
+      </form>
+    </section>
+  </main>
   <footer>
     &copy; 2025 Nest Capital Finance | All Rights Reserved
   </footer>
@@ -349,12 +424,10 @@
     });
   </script>
   <script>
-  document.getElementById('getStartedBtn').onclick = function() {
-    window.location.href = 'contact.html';
-  };
-</script>
-
+    document.getElementById('getStartedBtn').onclick = function() {
+      window.location.href = 'contact.html';
+    };
+  </script>
 </body>
 </html>
-
 
