--- a/index.html
+++ b/index.html
@@ -324,6 +324,18 @@ body.desktop .hero {
       section, .services, .testimonials {
         padding: 0.7rem .13rem;
       }
+      @media (min-width: 900px) {
+  .hero,
+  section,
+  main > section,
+  .services-section {
+    margin-left: 4rem;
+    margin-right: 0;
+    width: calc(100% - 4rem);
+    box-sizing: border-box;
+  }
+}
+
     }
   </style>
 </head>
