--- a/index.html
+++ b/index.html
@@ -7,23 +7,6 @@
   <!-- Import Fira Sans Light font -->
   <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300&display=swap" rel="stylesheet" />
   <style>
-    body.mobile header img {
-  height: 54px;
-  margin-left: 0.5rem;
-  margin-top: 0.7rem;
-}
-body.desktop header img {
-  height: 100px;
-  margin-left: 4rem;
-  margin-top: 2.5rem;
-}
-body.mobile .hero {
-  padding-left: 0.5rem;
-}
-body.desktop .hero {
-  padding-left: 4rem;
-}
-
     body {
       font-family: 'Fira Sans', Arial, sans-serif;
       font-weight: 300;
@@ -126,13 +109,16 @@ body.desktop .hero {
       position: relative;
       min-height: 90vh;
       overflow: hidden;
-      padding-left: 10vw;
       padding-top: 15vh;
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: flex-start;
       color: #fff;
+      margin-left: 4rem;
+      width: calc(100% - 4rem);
+      box-sizing: border-box;
+      /* removes double left padding */
     }
     .hero-slideshow {
       position: absolute;
@@ -218,6 +204,9 @@ body.desktop .hero {
       box-shadow: 0 1px 8px #0405123a;
       padding: 2rem 1.5rem;
       color: #e8e6ff;
+      margin-left: 4rem;
+      width: calc(100% - 4rem);
+      box-sizing: border-box;
     }
     h2 {
       color: #b6befb;
@@ -234,7 +223,11 @@ body.desktop .hero {
     @media (max-width: 1100px) {
       section {
         max-width: 99vw;
-        margin: 1rem 0.5rem;
+        margin: 1rem .25rem;
+      }
+      .hero {
+        margin-left: 1rem;
+        width: calc(100% - 1rem);
       }
     }
     @media (max-width: 900px) {
@@ -255,9 +248,12 @@ body.desktop .hero {
       section {
         margin: 1.2rem 0.2rem;
         padding: 1.3rem 0.5rem;
+        margin-left: 1rem;
+        width: calc(100% - 1rem);
       }
       .hero {
-        padding-left: 2vw;
+        margin-left: 1rem;
+        width: calc(100% - 1rem);
         padding-top: 115px;
         min-height: 65vh;
       }
@@ -280,8 +276,13 @@ body.desktop .hero {
         margin-top: .7rem;
         font-size: 0.98rem;
       }
-      .hero {
+      .hero,
+      section {
+        margin-left: 0;
+        width: 100%;
         padding-left: 0.5rem;
+      }
+      .hero {
         min-height: 48vh;
       }
       .hero-content {
@@ -313,6 +314,7 @@ body.desktop .hero {
       .hero {
         padding-left: 0.1rem;
         padding-top: 67px;
+        min-height: 36vh;
       }
       .hero-content {
         padding: 0 0.2rem;
@@ -324,18 +326,6 @@ body.desktop .hero {
       section, .services, .testimonials {
         padding: 0.7rem .13rem;
       }
-      @media (min-width: 900px) {
-  .hero,
-  section,
-  main > section,
-  .services-section {
-    margin-left: 4rem;
-    margin-right: 0;
-    width: calc(100% - 4rem);
-    box-sizing: border-box;
-  }
-}
-
     }
   </style>
 </head>
@@ -411,20 +401,6 @@ body.desktop .hero {
     &copy; 2025 Nest Capital Finance | All Rights Reserved
   </footer>
   <script>
-function isMobileDevice() {
-  return /android|webos|iphone|ipad|ipod|blackberry|iemobile|opera mini/i.test(navigator.userAgent);
-}
-
-if (isMobileDevice()) {
-  // Mobile-specific tweaks
-  document.body.classList.add('mobile'); // Add a mobile class to body
-} else {
-  // Desktop-specific tweaks
-  document.body.classList.add('desktop'); // Add a desktop class to body
-}
-</script>
-
-  <script>
     const slides = document.querySelectorAll('.hero-slideshow .slide');
     let currentSlide = 0;
     const slideInterval = setInterval(nextSlide, 5000);
@@ -473,4 +449,5 @@ if (isMobileDevice()) {
   </script>
 </body>
 </html>
+
 
