--- a/index.html
+++ b/index.html
@@ -1,23 +1,212 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Responsive Card Example</title>
-  <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300&display=swap" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Nest Capital Finance - Mortgage & Property Experts</title>
+  <!-- Import Fira Sans Light font -->
+  <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300&display=swap" rel="stylesheet" />
   <style>
     body {
-      margin: 0;
       font-family: 'Fira Sans', Arial, sans-serif;
+      font-weight: 300;
+      margin: 0;
       background: #181820;
       color: #fff;
     }
+    header {
+      position: absolute;
+      width: 100%;
+      background: transparent;
+      display: flex;
+      align-items: flex-start;
+      padding: 0;
+      z-index: 99;
+    }
+    header img {
+      height: 100px;
+      margin-left: 4rem;
+      margin-top: 2.5rem;
+      filter: brightness(0) invert(1);
+      transition: height 0.2s, margin 0.2s;
+    }
+    nav {
+      flex: 1;
+      display: flex;
+      justify-content: flex-end;
+      gap: 2.8rem;
+      margin-top: 2.6rem;
+      align-items: flex-start;
+      padding-right: 3rem;
+    }
+    .dropdown {
+      position: relative;
+      display: inline-block;
+    }
+    .dropbtn {
+      color: #fff;
+      text-decoration: none;
+      font-weight: 600;
+      font-size: 1rem;
+      transition: color 0.2s;
+      letter-spacing: .5px;
+      background: none;
+      border: none;
+      outline: none;
+      cursor: pointer;
+      padding: 0;
+      font-family: inherit;
+    }
+    .dropdown-content {
+      display: none;
+      position: absolute;
+      background-color: #232b34;
+      min-width: 200px;
+      box-shadow: 0 8px 18px 0 rgba(0,0,0,0.22);
+      border-radius: 7px;
+      margin-top: .7rem;
+      z-index: 1001;
+      padding: 0.4rem 0;
+    }
+    .dropdown-content a {
+      color: #fff;
+      padding: 0.9rem 1.5rem;
+      text-decoration: none;
+      display: block;
+      font-size: 1rem;
+      transition: background .17s, color .17s;
+      border-radius: 4px;
+    }
+    .dropdown-content a:hover {
+      background-color: #363d48;
+      color: #b6befb;
+    }
+    .dropdown:hover .dropdown-content {
+      display: block;
+    }
+    nav a, .dropbtn {
+      color: #fff;
+    }
+    nav a:hover, .dropbtn:hover {
+      color: #606060;
+    }
+    nav a {
+      color: #fff;
+      text-decoration: none;
+      font-weight: 600;
+      font-size: 1rem;
+      transition: color 0.2s;
+      letter-spacing: .5px;
+      position: relative;
+    }
+    nav a:hover {
+      color: #606060;
+    }
+
+    main {
+      padding-top: 130px;
+    }
+
+    .hero {
+      position: relative;
+      min-height: 90vh;
+      overflow: hidden;
+      padding-top: 15vh;
+      width: 100vw;
+      max-width: 100vw;
+      color: #fff;
+    }
+    .hero-slideshow {
+      position: absolute;
+      top: 0; left: 0; right: 0; bottom: 0;
+      z-index: 0;
+      width: 100vw;
+      height: 100%;
+      overflow: hidden;
+      filter: blur(3px);
+      transform: scale(1.05);
+    }
+    .hero-slideshow .slide {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      background-size: cover;
+      background-position: center;
+      opacity: 0.5;
+      transition: opacity 1.5s ease-in-out;
+    }
+    .hero-slideshow .slide.active {
+      opacity: 0.5;
+      z-index: 1;
+    }
+    .hero-slideshow::after {
+      content: '';
+      position: absolute;
+      top: 0; left: 0; right: 0; bottom: 0;
+      background-color: rgba(0, 0, 0, 0.55);
+      z-index: 2;
+      pointer-events: none;
+    }
+    .hero-content {
+      position: relative;
+      z-index: 2;
+      max-width: 600px;
+      margin-left: 4rem;
+      animation: fadeUp 1.1s 0.15s forwards;
+      opacity: 0;
+      transform: translateY(55px);
+    }
+    .hero h1 {
+      font-size: 3.2rem;
+      font-weight: 700;
+      color: #fff;
+      margin: 0 0 1.6rem 0;
+      text-shadow: 0 6px 16px #18182080;
+    }
+    .hero p {
+      font-size: 1.3rem;
+      color: #ededed;
+      margin: 0 0 2.5rem 0;
+      max-width: 520px;
+      text-shadow: 0 2px 5px #191a24af;
+    }
+    .cta-button {
+      background: #fff;
+      color: #191a2b;
+      border: none;
+      padding: 1rem 2.3rem;
+      font-size: 1.1rem;
+      border-radius: 7px;
+      font-weight: 700;
+      box-shadow: 0 4px 20px #232f3e19;
+      cursor: pointer;
+      transition: background 0.18s, color 0.18s, transform 0.09s;
+      letter-spacing: .04em;
+      width: 100%;
+      max-width: 330px;
+      display: block;
+      margin-top: 1rem;
+      margin-bottom: 0;
+      animation: fadeUp 1.2s 0.32s forwards;
+      opacity: 0;
+      transform: translateY(60px);
+    }
+    .cta-button:hover {
+      background: #2563eb;
+      color: #fff;
+    }
+    .cta-button:active {
+      transform: scale(0.965);
+      background: #1d47b8;
+      color: #fff;
+      box-shadow: 0 2px 10px #232f3e40;
+    }
+
     .cards-wrapper {
       display: flex;
       flex-direction: column;
       align-items: center;
       gap: 2.5rem;
-      /* Ensures cards center with space between */
       width: 100%;
       max-width: 100vw;
       padding: 3rem 1rem 2rem 1rem;
@@ -60,56 +249,143 @@
     @keyframes fadeUp {
       to { opacity: 1; transform: translateY(0); }
     }
+    @media (max-width: 900px) {
+      header img { height: 77px; margin-left: 1.2rem; margin-top: 1rem;}
+      nav { justify-content: center; gap: 1.5rem; margin-top: 1.2rem; padding-right: 0;}
+      .hero-content { margin-left: 1rem; }
+      .info-card, .cards-wrapper { padding-left: .5rem; padding-right: .5rem; }
+    }
     @media (max-width: 700px) {
-      .cards-wrapper {
-        padding: 1.1rem 0.15rem;
-        gap: 1.3rem;
-      }
-      .info-card {
-        max-width: 99vw;
-        width: 99vw;
-        padding: 1.2rem 0.65rem 1.3rem 0.65rem;
-        font-size: 0.98em;
-        border-radius: 9px;
-      }
-      .info-card h2 {
-        font-size: 1.18rem;
-      }
-      .info-card h3, .info-card strong {
-        font-size: 1.07rem;
-      }
+      header img { height: 54px; margin-left: 0.5rem; margin-top: .7rem;}
+      .hero-content { margin-left: 0.2rem; }
+      .info-card { max-width: 99vw; padding: 1.2rem 0.65rem; border-radius: 9px;}
+      .cards-wrapper { padding: 1.1rem 0.15rem;}
+      .hero h1 { font-size: 1.72rem; }
+      .hero p { font-size: 1em;}
     }
     @media (max-width: 450px) {
       .info-card { padding: .58rem .13rem .7rem .13rem; }
+      .cards-wrapper { padding: .3rem .04rem;}
     }
   </style>
 </head>
 <body>
-  <div class="cards-wrapper">
-    <div class="info-card">
-      <h2>Our Services</h2>
-      <p><strong>Home Loans</strong><br>
-        Access competitive residential and commercial home loan solutions from 60+ lenders, tailored to your needs.
-      </p>
-      <p><strong>Property Advisory</strong><br>
-        Guidance for buying, selling, or investing—local expertise and trusted advocacy to help you succeed.
-      </p>
-      <p><strong>Asset Finance</strong><br>
-        Finance for vehicles, business equipment, and assets—streamlined for fast approvals and fair rates.
-      </p>
+  <header>
+    <img src="https://raw.githubusercontent.com/Shaggyyyz/nestcapitalfinance-landing/refs/heads/main/NFCLogo1.png" alt="Nest Capital Finance Logo" />
+    <nav>
+      <div class="dropdown">
+        <a href="Services.html" class="dropbtn">Services</a>
+        <div class="dropdown-content">
+          <a href="Services.html#home-loans">Home Loans</a>
+          <a href="Services.html#property-advisory">Property Advisory</a>
+          <a href="Services.html#asset-finance">Asset Finance</a>
+        </div>
+      </div>
+      <a href="#about">About</a>
+      <a href="https://shaggyyyz.github.io/nestcapitalfinance-landing/contact.html">Contact</a>
+    </nav>
+  </header>
+  <main>
+    <div class="hero">
+      <div class="hero-slideshow">
+        <div class="slide active" style="background-image: url('https://raw.githubusercontent.com/Shaggyyyz/nestcapitalfinance-landing/refs/heads/main/image1.jpeg');"></div>
+        <div class="slide" style="background-image: url('https://raw.githubusercontent.com/Shaggyyyz/nestcapitalfinance-landing/refs/heads/main/image2.jpeg');"></div>
+        <div class="slide" style="background-image: url('https://raw.githubusercontent.com/Shaggyyyz/nestcapitalfinance-landing/refs/heads/main/image3.jpeg');"></div>
+        <div class="slide" style="background-image: url('https://raw.githubusercontent.com/Shaggyyyz/nestcapitalfinance-landing/refs/heads/main/image4.jpeg');"></div>
+        <div class="slide" style="background-image: url('https://raw.githubusercontent.com/Shaggyyyz/nestcapitalfinance-landing/refs/heads/main/image5.jpeg');"></div>
+      </div>
+      <div class="hero-content">
+        <h1>Dream. Plan. Buy.</h1>
+        <p>Your trusted partner for home loans, property finance, and Commercial finance</p>
+        <button class="cta-button" id="getStartedBtn">Get Started</button>
+      </div>
     </div>
-    <div class="info-card">
-      <h2>About Nest Capital Finance</h2>
-      <p>
-        At Nest Capital Finance, our mission is to simplify the journey to your dream property. Our award-nominated team combines industry experience, personal service, and insider access to leading lenders—earning 5-star client reviews every step of the way. Based in Australia, we support clients locally and overseas with tailored mortgage and property solutions.
-      </p>
-      <strong>Testimonials</strong>
-      <ul>
-        <li>"Nest Capital Finance made my home buying journey stress-free—professional, fast, and found a great rate for me." — Chris, Melbourne</li>
-        <li>"Expert advice, clear communication, and genuine care. Couldn’t recommend them more highly." — Priya, Sydney</li>
-      </ul>
+    <div class="cards-wrapper">
+      <div class="info-card">
+        <h2>Our Services</h2>
+        <p><strong>Home Loans</strong><br>
+          Access competitive residential and commercial home loan solutions from 60+ lenders, tailored to your needs.
+        </p>
+        <p><strong>Property Advisory</strong><br>
+          Guidance for buying, selling, or investing—local expertise and trusted advocacy to help you succeed.
+        </p>
+        <p><strong>Asset Finance</strong><br>
+          Finance for vehicles, business equipment, and assets—streamlined for fast approvals and fair rates.
+        </p>
+      </div>
+      <div class="info-card">
+        <h2>About Nest Capital Finance</h2>
+        <p>
+          At Nest Capital Finance, our mission is to simplify the journey to your dream property. Our award-nominated team combines industry experience, personal service, and insider access to leading lenders—earning 5-star client reviews every step of the way. Based in Australia, we support clients locally and overseas with tailored mortgage and property solutions.
+        </p>
+        <strong>Testimonials</strong>
+        <ul>
+          <li>"Nest Capital Finance made my home buying journey stress-free—professional, fast, and found a great rate for me." — Chris, Melbourne</li>
+          <li>"Expert advice, clear communication, and genuine care. Couldn’t recommend them more highly." — Priya, Sydney</li>
+        </ul>
+      </div>
     </div>
-  </div>
+    <section class="contact-section" id="contact">
+      <h2>Contact Us</h2>
+      <p>Want to discuss your property finance needs? Send us a message and our team will get in touch.</p>
+      <form>
+        <input type="text" placeholder="Full Name" required /><br />
+        <input type="email" placeholder="Email" required /><br />
+        <textarea placeholder="Your Message" rows="4" required></textarea><br />
+        <button type="submit" class="cta-button">Send Message</button>
+      </form>
+    </section>
+  </main>
+  <footer>
+    &copy; 2025 Nest Capital Finance | All Rights Reserved
+  </footer>
+  <script>
+    const slides = document.querySelectorAll('.hero-slideshow .slide');
+    let currentSlide = 0;
+    const slideInterval = setInterval(nextSlide, 5000);
+
+    function nextSlide() {
+      slides[currentSlide].classList.remove('active');
+      currentSlide = (currentSlide + 1) % slides.length;
+      slides[currentSlide].classList.add('active');
+    }
+  </script>
+  <script>
+    document.querySelectorAll('.dropdown').forEach(function(drop) {
+      var timer;
+
+      drop.addEventListener('mouseenter', function() {
+        clearTimeout(timer);
+        this.querySelector('.dropdown-content').style.display = 'block';
+      });
+
+      drop.addEventListener('mouseleave', function() {
+        var dropdownContent = this.querySelector('.dropdown-content');
+        timer = setTimeout(function() {
+          dropdownContent.style.display = 'none';
+        }, 1000);
+      });
+
+      var content = drop.querySelector('.dropdown-content');
+      if (content) {
+        content.addEventListener('mouseenter', function() {
+          clearTimeout(timer);
+          this.style.display = 'block';
+        });
+        content.addEventListener('mouseleave', function() {
+          var self = this;
+          timer = setTimeout(function() {
+            self.style.display = 'none';
+          }, 1000);
+        });
+      }
+    });
+  </script>
+  <script>
+    document.getElementById('getStartedBtn').onclick = function() {
+      window.location.href = 'contact.html';
+    };
+  </script>
 </body>
 </html>
 
