--- a/index.html
+++ b/index.html
@@ -4,12 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Nest Capital Finance - Mortgage & Property Experts</title>
+  <!-- Import Fira Sans Light font -->
   <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300&display=swap" rel="stylesheet" />
   <style>
-    :root {
-      --side-padding-desktop: 4rem;
-      --side-padding-mobile: 0.7rem;
-    }
     body {
       font-family: 'Fira Sans', Arial, sans-serif;
       font-weight: 300;
@@ -19,7 +16,6 @@
     }
     header {
       position: absolute;
-      left: 0; top: 0; right: 0;
       width: 100%;
       background: transparent;
       display: flex;
@@ -29,10 +25,9 @@
     }
     header img {
       height: 100px;
-      margin-left: var(--side-padding-desktop);
+      margin-left: 4rem;
       margin-top: 2.5rem;
       filter: brightness(0) invert(1);
-      transition: height 0.2s, margin 0.2s;
     }
     nav {
       flex: 1;
@@ -43,28 +38,95 @@
       align-items: flex-start;
       padding-right: 3rem;
     }
+    .dropdown {
+      position: relative;
+      display: inline-block;
+    }
+    .dropbtn {
+      color: #fff;
+      text-decoration: none;
+      font-weight: 600;
+      font-size: 1rem;
+      transition: color 0.2s;
+      letter-spacing: .5px;
+      background: none;
+      border: none;
+      outline: none;
+      cursor: pointer;
+      padding: 0;
+      font-family: inherit;
+    }
+    .dropdown-content {
+      display: none;
+      position: absolute;
+      background-color: #232b34;
+      min-width: 200px;
+      box-shadow: 0 8px 18px 0 rgba(0,0,0,0.22);
+      border-radius: 7px;
+      margin-top: .7rem;
+      z-index: 1001;
+      padding: 0.4rem 0;
+    }
+    .dropdown-content a {
+      color: #fff;
+      padding: 0.9rem 1.5rem;
+      text-decoration: none;
+      display: block;
+      font-size: 1rem;
+      transition: background .17s, color .17s;
+      border-radius: 4px;
+    }
+    .dropdown-content a:hover {
+      background-color: #363d48;
+      color: #b6befb;
+    }
+    .dropdown:hover .dropdown-content {
+      display: block;
+    }
+    nav a, .dropbtn {
+      color: #fff;
+    }
+    nav a:hover, .dropbtn:hover {
+      color: #606060;
+    }
+    nav a {
+      color: #fff;
+      text-decoration: none;
+      font-weight: 600;
+      font-size: 1rem;
+      transition: color 0.2s;
+      letter-spacing: .5px;
+      position: relative;
+    }
+    nav a:hover {
+      color: #606060;
+    }
+    main {
+      padding-top: 130px;
+    }
     .hero {
       position: relative;
       min-height: 90vh;
       overflow: hidden;
+      padding-left: 4rem;
       padding-top: 15vh;
-      width: 100vw;
-      max-width: 100vw;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: flex-start;
       color: #fff;
     }
     .hero-slideshow {
       position: absolute;
       top: 0; left: 0; right: 0; bottom: 0;
       z-index: 0;
-      width: 100vw;
-      height: 100%;
       overflow: hidden;
       filter: blur(3px);
       transform: scale(1.05);
     }
     .hero-slideshow .slide {
       position: absolute;
-      width: 100vw;
+      width: 100%;
       height: 100%;
       background-size: cover;
       background-position: center;
@@ -87,11 +149,6 @@
       position: relative;
       z-index: 2;
       max-width: 600px;
-      padding-left: var(--side-padding-desktop); /* only the content is padded */
-      box-sizing: border-box;
-      animation: fadeUp 1.1s 0.15s forwards;
-      opacity: 0;
-      transform: translateY(55px);
     }
     .hero h1 {
       font-size: 3.2rem;
@@ -124,9 +181,6 @@
       display: block;
       margin-top: 1rem;
       margin-bottom: 0;
-      animation: fadeUp 1.2s 0.32s forwards;
-      opacity: 0;
-      transform: translateY(60px);
     }
     .cta-button:hover {
       background: #2563eb;
@@ -138,29 +192,28 @@
       color: #fff;
       box-shadow: 0 2px 10px #232f3e40;
     }
-    @keyframes fadeUp {
-      to { opacity: 1; transform: translateY(0); }
+    section {
+      max-width: 900px;
+      margin: 2rem auto;
+      background: #22232c;
+      border-radius: 14px;
+      box-shadow: 0 1px 8px #0405123a;
+      padding: 2rem 1.5rem;
+      color: #e8e6ff;
     }
-    /* ... your other card/section styles ... */
-
-    @media (max-width: 900px) {
-      header img {
-        margin-left: var(--side-padding-mobile);
-        height: 75px;
-        margin-top: 1.2rem;
-      }
-      .hero-content {
-        padding-left: var(--side-padding-mobile);
-      }
+    h2 {
+      color: #b6befb;
     }
-    @media (max-width: 700px) {
-      .hero h1 { font-size: 1.7rem; }
-      .hero-content { padding-left: 0.2rem; }
-      .hero p { font-size: 1em;}
+    footer {
+      background: #181a20;
+      color: #a7a7be;
+      text-align: center;
+      padding: 2rem 0;
+      margin-top: 3rem;
+      font-size: 1rem;
+      letter-spacing: .7px;
     }
-    @media (max-width: 450px) {
-      .hero-content { padding-left: 0.05rem; }
-    }
+    /* No mobile breakpoints in this version */
   </style>
 </head>
 <body>
@@ -194,7 +247,42 @@
         <button class="cta-button" id="getStartedBtn">Get Started</button>
       </div>
     </div>
-    <!-- ... rest of your content ... -->
+    <section id="services">
+      <h2>Our Services</h2>
+      <div class="services">
+        <div class="service">
+          <h3>Home Loans</h3>
+          <p>Access competitive residential and commercial home loan solutions from 60+ lenders, tailored to your needs.</p>
+        </div>
+        <div class="service">
+          <h3>Property Advisory</h3>
+          <p>Guidance for buying, selling, or investing—local expertise and trusted advocacy to help you succeed.</p>
+        </div>
+        <div class="service">
+          <h3>Asset Finance</h3>
+          <p>Finance for vehicles, business equipment, and assets—streamlined for fast approvals and fair rates.</p>
+        </div>
+      </div>
+    </section>
+    <section id="about">
+      <h2>About Nest Capital Finance</h2>
+      <p>At Nest Capital Finance, our mission is to simplify the journey to your dream property. Our award-nominated team combines industry experience, personal service, and insider access to leading lenders—earning 5-star client reviews every step of the way. Based in Australia, we support clients locally and overseas with tailored mortgage and property solutions.</p>
+      <div class="testimonials">
+        <strong>Testimonials</strong>
+        <div class="testimonial">"Nest Capital Finance made my home buying journey stress-free—professional, fast, and found a great rate for me." — Chris, Melbourne</div>
+        <div class="testimonial">"Expert advice, clear communication, and genuine care. Couldn’t recommend them more highly." — Priya, Sydney</div>
+      </div>
+    </section>
+    <section class="contact-section" id="contact">
+      <h2>Contact Us</h2>
+      <p>Want to discuss your property finance needs? Send us a message and our team will get in touch.</p>
+      <form>
+        <input type="text" placeholder="Full Name" required /><br />
+        <input type="email" placeholder="Email" required /><br />
+        <textarea placeholder="Your Message" rows="4" required></textarea><br />
+        <button type="submit" class="cta-button">Send Message</button>
+      </form>
+    </section>
   </main>
   <footer>
     &copy; 2025 Nest Capital Finance | All Rights Reserved
@@ -203,6 +291,7 @@
     const slides = document.querySelectorAll('.hero-slideshow .slide');
     let currentSlide = 0;
     const slideInterval = setInterval(nextSlide, 5000);
+
     function nextSlide() {
       slides[currentSlide].classList.remove('active');
       currentSlide = (currentSlide + 1) % slides.length;
@@ -212,16 +301,19 @@
   <script>
     document.querySelectorAll('.dropdown').forEach(function(drop) {
       var timer;
+
       drop.addEventListener('mouseenter', function() {
         clearTimeout(timer);
         this.querySelector('.dropdown-content').style.display = 'block';
       });
+
       drop.addEventListener('mouseleave', function() {
         var dropdownContent = this.querySelector('.dropdown-content');
         timer = setTimeout(function() {
           dropdownContent.style.display = 'none';
         }, 1000);
       });
+
       var content = drop.querySelector('.dropdown-content');
       if (content) {
         content.addEventListener('mouseenter', function() {
@@ -244,6 +336,7 @@
   </script>
 </body>
 </html>
+
 
 
 
