--- a/index.html
+++ b/index.html
@@ -104,26 +104,25 @@
     main {
       padding-top: 130px;
     }
-    .hero {
-      position: relative;
-      min-height: 90vh;
-      overflow: hidden;
-      padding-left: 4rem;
-      padding-top: 15vh;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: flex-start;
-      color: #fff;
-    }
-    .hero-slideshow {
-      position: absolute;
-      top: 0; left: 0; right: 0; bottom: 0;
-      z-index: 0;
-      overflow: hidden;
-      filter: blur(3px);
-      transform: scale(1.05);
-    }
+.hero {
+  position: relative;
+  min-height: 90vh;
+  overflow: hidden;
+  /* remove padding-left if used only for content alignment, keep for content not background */
+  padding-top: 0;         /* remove any vertical padding! */
+}
+
+.hero-slideshow {
+  position: absolute;
+  top: 0; left: 0; right: 0; bottom: 0;
+  z-index: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  filter: blur(3px);
+  transform: scale(1.05);
+}
+
     .hero-slideshow .slide {
       position: absolute;
       width: 100%;
