--- a/index.html
+++ b/index.html
@@ -102,8 +102,10 @@
       color: #606060;
     }
     main {
-      padding-top: 130px;
-    }
+  /* Remove padding-top, or set to 0 if you prefer: */
+  /* padding-top: 0; */
+}
+
 .hero {
   position: relative;
   min-height: 90vh;
