--- a/index.html
+++ b/index.html
@@ -237,6 +237,8 @@
       </div>
       <a href="#about">About</a>
       <a href="https://shaggyyyz.github.io/nestcapitalfinance-landing/contact.html">Contact</a>
+      <a href="#about">Partners</a>
+      <a href="#about">Resources</a>
     </nav>
   </header>
   <main>
