--- a/index.html
+++ b/index.html
@@ -226,20 +226,39 @@
 <body>
   <header>
     <img src="https://raw.githubusercontent.com/Shaggyyyz/nestcapitalfinance-landing/refs/heads/main/NFCLogo1.png" alt="Nest Capital Finance Logo" />
-    <nav>
-      <div class="dropdown">
-        <a href="Services.html" class="dropbtn">Services</a>
-        <div class="dropdown-content">
-          <a href="Services.html#home-loans">Home Loans</a>
-          <a href="Services.html#property-advisory">Property Advisory</a>
-          <a href="Services.html#asset-finance">Asset Finance</a>
-        </div>
-      </div>
-      <a href="#about">About</a>
-      <a href="https://shaggyyyz.github.io/nestcapitalfinance-landing/contact.html">Contact</a>
-      <a href="#about">Partners</a>
-      <a href="#about">Resources</a>
-    </nav>
+  <nav>
+  <div class="dropdown">
+    <a href="Services.html" class="dropbtn">Services</a>
+    <div class="dropdown-content">
+      <a href="Services.html#home-loans">Home Loans</a>
+      <a href="Services.html#property-advisory">Property Advisory</a>
+      <a href="Services.html#asset-finance">Asset Finance</a>
+    </div>
+  </div>
+  <div class="dropdown">
+    <a href="#about" class="dropbtn">About</a>
+    <div class="dropdown-content">
+      <a href="#company-mission">Company Mission</a>
+      <a href="#our-team">Meet Our Team</a>
+    </div>
+  </div>
+  <div class="dropdown">
+    <a href="#partners" class="dropbtn">Partners</a>
+    <div class="dropdown-content">
+      <a href="#">Coming Soon</a>
+    </div>
+  </div>
+  <div class="dropdown">
+    <a href="#resources" class="dropbtn">Resources</a>
+    <div class="dropdown-content">
+      <a href="#calculators">Home Loan Calculators</a>
+      <a href="#lender-panel">Lender Panel</a>
+      <a href="#blogs">Blogs</a>
+      <a href="#faqs">FAQs</a>
+    </div>
+  </div>
+  <a href="contact.html">Contact</a>
+</nav>
   </header>
   <main>
     <div class="hero">
