--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
     </div>
   </div>
   <div class="dropdown">
-    <a href="#about" class="dropbtn">About</a>
+    <a href="about.html" class="dropbtn">About</a>
     <div class="dropdown-content">
       <a href="#company-mission">Company Mission</a>
       <a href="#our-team">Meet Our Team</a>
