--- a/about.html
+++ b/about.html
@@ -100,7 +100,10 @@
     nav a:hover {
       color: #606060;
     }
-    main { }
+    main {
+  padding-top: 130px; /* This keeps content below the floating logo/header */
+}
+
     section {
       max-width: 900px;
       margin: 2rem auto;
