--- a/index.html
+++ b/index.html
@@ -238,8 +238,8 @@
   <div class="dropdown">
     <a href="about.html" class="dropbtn">About</a>
     <div class="dropdown-content">
-      <a href="#company-mission">Company Mission</a>
-      <a href="#our-team">Meet Our Team</a>
+      <a href="about.html">Company Mission</a>
+      <a href="about.html">Meet Our Team</a>
     </div>
   </div>
   <div class="dropdown">
