--- a/about.html
+++ b/about.html
@@ -189,7 +189,9 @@
 </head>
 <body>
   <header>
-    <img src="https://raw.githubusercontent.com/Shaggyyyz/nestcapitalfinance-landing/refs/heads/main/NFCLogo1.png" alt="Nest Capital Finance Logo" />
+     <a href="index.html">
+      <img src="https://raw.githubusercontent.com/Shaggyyyz/nestcapitalfinance-landing/refs/heads/main/NFCLogo1.png" alt="Nest Capital Finance Logo" />
+    </a>
     <nav>
       <div class="dropdown">
         <a href="Services.html" class="dropbtn">Services</a>
