--- a/Services.html
+++ b/Services.html
@@ -38,6 +38,20 @@
       text-align: center;
       font-weight: 700;
     }
+    .dropdown-content {
+  display: none;
+  position: absolute;
+  top: 100%;       /* aligns dropdown just below the button */
+  left: 0;         /* aligns left edge with parent */
+  background-color: #232b34;
+  min-width: 200px;
+  box-shadow: 0 8px 18px 0 rgba(0,0,0,0.22);
+  border-radius: 7px;
+  margin-top: 0.7rem;
+  z-index: 1001;
+  padding: 0.4rem 0;
+}
+
     .services-section {
       max-width: 1000px;
       margin: 2rem auto;
