--- a/about.html
+++ b/about.html
@@ -223,7 +223,7 @@
           <a href="#faqs">FAQs</a>
         </div>
       </div>
-      <a href="#contact">Contact</a>
+      <a href="contact.html">Contact</a>
     </nav>
   </header>
   <main>
